--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,7 +3,7 @@
 * [**] A new author can be chosen for Posts and Pages on multi-author sites. [#16281]
 * [*] Fixed the Follow Sites Quick Start Tour so that Reader Search is highlighted. [#16391]
 * [*] Enabled approving login authentication requests via push notification while the app is in the foreground. [#16075] 
-
+* [**] Added pull-to-refresh to the My Site screen when a user has no sites. [#16241]
 
 17.3
 -----
