--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+17.5
+-----
+* [*] Fixed a bug that was causing some fonts to become enormous when large text was enabled.
+
 17.4
 -----
 * [**] A new author can be chosen for Posts and Pages on multi-author sites. [#16281]
