--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-04-30 16:03:41+0000 */
+/* Translation-Revision-Date: 2021-05-17 12:54:47+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: id */
@@ -493,7 +493,7 @@
 "Add tags" = "Tambahkan tag";
 
 /* No comment provided by engineer. */
-"Add text…" = "Add text…";
+"Add text…" = "Tambahkan teks…";
 
 /* No comment provided by engineer. */
 "Add this email link" = "Tambahkan link email ini";
@@ -774,7 +774,7 @@
 "Attach File as Link" = "Melampirkan File sebagai Tautan";
 
 /* No comment provided by engineer. */
-"Attachment page" = "Attachment page";
+"Attachment page" = "Halaman lampiran";
 
 /* No comment provided by engineer. */
 "Audio Player" = "Pemutar Audio";
@@ -786,7 +786,7 @@
 "Audio caption. Empty" = "Keterangan audio. Kosong";
 
 /* No comment provided by engineer. */
-"Audio settings" = "Audio settings";
+"Audio settings" = "Pengaturan audio";
 
 /* Accessibility label for audio items in the media collection view. The parameter is the creation date of the audio. */
 "Audio, %@" = "Audio, %@";
@@ -812,7 +812,7 @@
 "Authors" = "Penulis";
 
 /* No comment provided by engineer. */
-"Auto" = "Auto";
+"Auto" = "Otomatis";
 
 /* Describes a status of a plugin */
 "Auto-managed" = "Pengelolaan otomatis";
@@ -840,7 +840,7 @@
 "Automatically share new posts to your social media accounts." = "Bagikan pos baru secara otomatis ke akun media sosial Anda.";
 
 /* No comment provided by engineer. */
-"Autoplay" = "Autoplay";
+"Autoplay" = "Putar otomatis";
 
 /* Whether a plugin has enabled automatic updates */
 "Autoupdates" = "Pembaruan otomatis";
@@ -923,7 +923,7 @@
 "Block Quote" = "Blokir Kutipan";
 
 /* No comment provided by engineer. */
-"Block cannot be rendered inside itself." = "Block cannot be rendered inside itself.";
+"Block cannot be rendered inside itself." = "Blok tidak dapat dirender secara mandiri.";
 
 /* translators: displayed right after the block is copied. */
 "Block copied" = "Blok disalin";
@@ -938,7 +938,7 @@
 "Block editor enabled" = "Penyunting blok diaktifkan";
 
 /* No comment provided by engineer. */
-"Block has been deleted or is unavailable." = "Block has been deleted or is unavailable.";
+"Block has been deleted or is unavailable." = "Blok telah dihapus atau tidak tersedia.";
 
 /* Jetpack Settings: Block malicious login attempts */
 "Block malicious login attempts" = "Memblokir upaya login berbahaya";
@@ -992,7 +992,7 @@
 "Browse all our themes to find your perfect fit." = "Jelajahi semua tema kami untuk menemukan yang paling cocok.";
 
 /* No comment provided by engineer. */
-"Browser default" = "Browser default";
+"Browser default" = "Pengaturan asal perambah";
 
 /* Jetpack Settings: Brute Force Attack Protection Section */
 "Brute Force Attack Protection" = "Perlindungan Terhadap Serangan Paksa";
@@ -1177,7 +1177,7 @@
 "Change failed" = "Perubahan gagal";
 
 /* No comment provided by engineer. */
-"Change heading level" = "Change heading level";
+"Change heading level" = "Ubah level judul";
 
 /* Accessibility hint for web preview device switching button */
 "Change the device type used for preview" = "Ganti jenis perangkat yang digunakan untuk meninjau";
@@ -1599,7 +1599,7 @@
 "Continue" = "Lanjutkan";
 
 /* Button title. Takes the user to the login with WordPress.com flow. */
-"Continue With WordPress.com" = "Continue With WordPress.com";
+"Continue With WordPress.com" = "Lanjutkan Dengan WordPress.com";
 
 /* Menus alert button title to continue making changes. */
 "Continue Working" = "Lanjutkan Bekerja";
@@ -2089,7 +2089,7 @@
 "Display Name" = "Nama Tampilan";
 
 /* No comment provided by engineer. */
-"Display post date" = "Display post date";
+"Display post date" = "Tampilkan tanggal pos";
 
 /* Unconfigured stats all-time widget helper text */
 "Display your all-time site stats here. Configure in the WordPress app in your site stats." = "Menampilkan statistik situs semua waktu di sini. Konfigurasikan di aplikasi WordPress di bagian statistik situs Anda.";
@@ -2277,7 +2277,7 @@
 "Edit focal point" = "Edit focal point";
 
 /* No comment provided by engineer. */
-"Edit image" = "Edit image";
+"Edit image" = "Sunting gambar";
 
 /* Explanation for the option to enable the block editor */
 "Edit new posts and pages with the block editor." = "Sunting pos dan halaman baru dengan penyunting blok.";
@@ -2376,7 +2376,7 @@
 "Enter Full Screen" = "Masuk ke Layar Penuh";
 
 /* No comment provided by engineer. */
-"Enter URL to embed here…" = "Enter URL to embed here…";
+"Enter URL to embed here…" = "Masukkan URL yang ingin disematkan di sini…";
 
 /* Enter a custom value */
 "Enter a custom value" = "Masukkan nilai kustom";
@@ -2424,10 +2424,10 @@
 "Enter your server credentials to enable one click site restores from backups." = "Masukkan kredensial server Anda untuk mengaktifkan pemulihan situs sekali klik dari pencadangan.";
 
 /* Title for button when a site is missing server credentials */
-"Enter your server credentials to fix threat." = "Enter your server credentials to fix threat.";
+"Enter your server credentials to fix threat." = "Masukkan kredensial server Anda untuk menangani ancaman.";
 
 /* Title for button when a site is missing server credentials */
-"Enter your server credentials to fix threats." = "Enter your server credentials to fix threats.";
+"Enter your server credentials to fix threats." = "Masukkan kredensial server Anda untuk menangani ancaman.";
 
 /* Generic error alert title
    Generic error.
@@ -2881,7 +2881,7 @@
 "Get your site up and running" = "Jalankan situs Anda";
 
 /* Example post title used in the login prologue screens. */
-"Getting Inspired" = "Getting Inspired";
+"Getting Inspired" = "Dapatkan Inspirasi";
 
 /* Alerts the user that wpcom account information is being retrieved. */
 "Getting account information" = "Mencari informasi akun";
@@ -2983,7 +2983,7 @@
 "Header 6" = "Header 6";
 
 /* translators: %s: heading level e.g: \"1\", \"2\", \"3\" */
-"Heading %d" = "Heading %d";
+"Heading %d" = "Judul %d";
 
 /* H1 Aztec Style */
 "Heading 1" = "Penajukan 1";
@@ -3080,7 +3080,7 @@
 "I Like It" = "Saya Menyukainya";
 
 /* Example post content used in the login prologue screens. */
-"I am so inspired by photographer Cameron Karsten's work. I will be trying these techniques on my next" = "I am so inspired by photographer Cameron Karsten's work. I will be trying these techniques on my next";
+"I am so inspired by photographer Cameron Karsten's work. I will be trying these techniques on my next" = "Saya sangat terinspirasi oleh karya fotografer Cameron Karsten. Saya akan mencoba teknik ini selanjutnya";
 
 /* Title of a button style */
 "Icon & Text" = "Ikon & Teks";
@@ -3140,7 +3140,7 @@
 "Image caption. %s" = "Keterangan gambar. %s";
 
 /* No comment provided by engineer. */
-"Image settings" = "Image settings";
+"Image settings" = "Pengaturan gambar";
 
 /* Hint for image title on image settings. */
 "Image title" = "Judul gambar";
@@ -3489,7 +3489,7 @@
 "Link To" = "Tautkan Ke";
 
 /* No comment provided by engineer. */
-"Link to" = "Link to";
+"Link to" = "Tautkan ke";
 
 /* Action. Label for navigate and display links to other posts on the site */
 "Link to existing content" = "Tautkan ke konten yang sudah ada";
@@ -3643,7 +3643,7 @@
 "Looks like you have Jetpack set up on your site. Congrats! Log in with your WordPress.com credentials to enable Stats and Notifications." = "Sepertinya Anda telah menyiapkan Jetpack di situs Anda. Selamat! Login dengan kredensial WordPress.com Anda untuk mengaktifkan Statistik dan Pemberitahuan.";
 
 /* No comment provided by engineer. */
-"Loop" = "Loop";
+"Loop" = "Pengulangan";
 
 /* Title of a button. */
 "Lost your password?" = "Lupa sandi Anda?";
@@ -3755,13 +3755,13 @@
 "Media Uploads" = "Unggahan Media";
 
 /* No comment provided by engineer. */
-"Media area" = "Media area";
+"Media area" = "Area media";
 
 /* Error message to show to users when trying to upload a media object with no local file associated */
 "Media doesn't have an associated file to upload." = "Media tidak memiliki file yang dikaitkan untuk diunggah.";
 
 /* No comment provided by engineer. */
-"Media file" = "Media file";
+"Media file" = "File media";
 
 /* Error message to show to users when trying to upload a media object with file size is larger than the max file size allowed in the site */
 "Media filesize (%@) is too large to upload. Maximum allowed is %@" = "Ukuran file media (%1$@) terlalu besar untuk diunggah. Ukuran yang diizinkan adalah %2$@";
@@ -3908,7 +3908,7 @@
 "Moves the comment to the Trash." = "Pindahkan komentar ke Tempat Sampah";
 
 /* Example post title used in the login prologue screens. */
-"Museums to See In London" = "Museums to See In London";
+"Museums to See In London" = "Museum yang Bisa Dikunjungi di London";
 
 /* An example tag used in the login prologue screens. */
 "Music" = "Musik";
@@ -3934,7 +3934,7 @@
 "My Tickets" = "Tiket Saya";
 
 /* Example post title used in the login prologue screens. */
-"My Top Ten Cafes" = "My Top Ten Cafes";
+"My Top Ten Cafes" = "Sepuluh Kafe Favorit Saya";
 
 /* Accessibility label for the Email text field.
    Name text field placeholder */
@@ -4494,7 +4494,7 @@
 "Page Settings" = "Pengaturan Halaman";
 
 /* No comment provided by engineer. */
-"Page break" = "Page break";
+"Page break" = "Pemisah laman";
 
 /* translators: accessibility text. %s: Page break text. */
 "Page break block. %s" = "Blok pemisah halaman. %s";
@@ -4799,7 +4799,7 @@
 "Post by %@, from %@" = "Diposting oleh %1$@, dari %2$@";
 
 /* No comment provided by engineer. */
-"Post content settings" = "Post content settings";
+"Post content settings" = "Pengaturan konten pos";
 
 /* The footer text appears within the footer displaying when the post has been created. */
 "Post created on %@" = "Pos dibuat pada %@";
@@ -4811,7 +4811,7 @@
 "Post failed to upload" = "Pos gagal diunggah";
 
 /* No comment provided by engineer. */
-"Post meta settings" = "Post meta settings";
+"Post meta settings" = "Pengaturan meta pos";
 
 /* A short message explaining that a post was moved to the trash bin. */
 "Post moved to trash." = "Pos dipindahkan ke sampah.";
@@ -4892,7 +4892,7 @@
 "Powered by Tenor" = "Didukung oleh Tenor";
 
 /* No comment provided by engineer. */
-"Preload" = "Preload";
+"Preload" = "Pramuat";
 
 /* Browse premium themes selection title */
 "Premium" = "Premium";
@@ -5077,7 +5077,7 @@
 "Rate us on the App Store" = "Beri nilai kami di App Store";
 
 /* No comment provided by engineer. */
-"Read more" = "Read more";
+"Read more" = "Baca selengkapnya";
 
 /* In the share extension, this is the text used right before attributing a quote to a website. Example: 'Read on www.site.com'. We are looking for the 'Read on' text in this situation. */
 "Read on" = "Baca di";
@@ -5249,7 +5249,7 @@
 "Replace file" = "Ganti file";
 
 /* No comment provided by engineer. */
-"Replace image" = "Replace image";
+"Replace image" = "Ganti gambar";
 
 /* No comment provided by engineer. */
 "Replace image or video" = "Ganti gambar atau video";
@@ -5839,7 +5839,7 @@
 "Show Related Posts" = "Tampilkan Pos Terkait";
 
 /* No comment provided by engineer. */
-"Show download button" = "Show download button";
+"Show download button" = "Tampilkan tombol unduh";
 
 /* Accessibility label for the 'Show password' button in the login page's password field.
    Accessibility label for the “Show password“ button in the login page's password field. */
@@ -5982,7 +5982,7 @@
 
 /* Prologue title label, the 
  force splits it into 2 lines. */
-"Site security and performance\nfrom your pocket" = "Site security and performance\nfrom your pocket";
+"Site security and performance\nfrom your pocket" = "Keamanan dan performa situs\ndari saku Anda";
 
 /* Site timezone offset from UTC. The first %@ is plus or minus. %d is the number of hours. The last %@ is minutes, where applicable. Examples: `Site timezone (UTC+10:30)`, `Site timezone (UTC-8)`. */
 "Site timezone (UTC%@%d%@)" = "Atur zona waktu (UTC%1$@%2$d%3$@)";
@@ -6112,7 +6112,7 @@
 "Sort By" = "Urutkan Berdasarkan";
 
 /* No comment provided by engineer. */
-"Sorting and filtering" = "Sorting and filtering";
+"Sorting and filtering" = "Pengurutan dan penyaringan";
 
 /* Opens the Github Repository Web */
 "Source Code" = "Kode Sumber";
@@ -6467,7 +6467,7 @@
 "The WordPress for Android App Gets a Big Facelift" = "Desain WordPress untuk Aplikasi Android Mengalami Perubahan Besar";
 
 /* Example post title used in the login prologue screens. This is a post about football fans. */
-"The World's Best Fans" = "The World's Best Fans";
+"The World's Best Fans" = "Penggemar Terbaik di Dunia";
 
 /* No comment provided by engineer. */
 "The app can't recognize the server response. Please, check the configuration of your site." = "Aplikasi tidak dapat mengenali respon server. Silakan periksa konfigurasi pada situs Anda.";
@@ -7213,7 +7213,7 @@
 "Unread" = "Belum dibaca";
 
 /* Title of unreplied Comments filter. */
-"Unreplied" = "Unreplied";
+"Unreplied" = "Belum dibalas";
 
 /* Menus alert title for alerting the user to unsaved changes. */
 "Unsaved Changes" = "Perubahan Belum Disimpan";
@@ -7412,7 +7412,7 @@
 "Video export canceled." = "Ekspor video dibatalkan.";
 
 /* No comment provided by engineer. */
-"Video settings" = "Video settings";
+"Video settings" = "Pengaturan video";
 
 /* Accessibility label for video thumbnails in the media collection view. The parameter is the creation date of the video. */
 "Video, %@" = "Video, %@";
@@ -7987,7 +7987,7 @@
 "Write a reply…" = "Tulis balasan...";
 
 /* No comment provided by engineer. */
-"Write code…" = "Write code…";
+"Write code…" = "Tulis kode…";
 
 /* Title for the writing section in site settings screen */
 "Writing" = "Tulisan";
@@ -8294,7 +8294,7 @@
 "image" = "gambar";
 
 /* translators: 1: the order number of the image. 2: the total number of images. */
-"image %1$d of %2$d in gallery" = "image %1$d of %2$d in gallery";
+"image %1$d of %2$d in gallery" = "gambar %1$d dari %2$d di galeri";
 
 /* Text for related post cell preview */
 "in \"Apps\"" = "di \"Aplikasi\"";
